--- a/src/Sample/Sample.css
+++ b/src/Sample/Sample.css
@@ -7,9 +7,5 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: #555;
-}
-
-.sample-container > div {
-    margin: 10px;
+    background: #CCC;
 }
