--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,5 @@
 html, body {
     margin: 0;
-    padding: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 10px;
-}
-
-p {
-    max-width: 700px;
-    margin: auto;
-    font-size: 16px;
+    padding: 5px;
+    background-color: #f6f8fa;
 }
