--- a/src/Sample/DemoBox/DemoBox.css
+++ b/src/Sample/DemoBox/DemoBox.css
@@ -29,6 +29,10 @@
     display: inline-block;
 }
 
-/*.bracket-nested {
+.prop-input {
+    display: inline-block;
+}
+
+.prop-input-nested {
     display: block;
-}*/
+}
