fretboard basically done

--- a/src/Sample/PropertyDemo/FretboardStringProperties/FretboardStringProperties.css
+++ b/src/Sample/PropertyDemo/FretboardStringProperties/FretboardStringProperties.css
@@ -1,12 +1,7 @@
 .fretboard-tuner {
-    display: inline-block;
+    margin-left: 20px;
 }
 
 .fretboard-tuner * {
-    font-size: 12px;
-    font-weight: normal;
-}
 
-.string-number {
-    min-width: 20px;
 }
