--- a/src/Sample/Sample.css
+++ b/src/Sample/Sample.css
@@ -29,3 +29,14 @@ h1, h2 {
     margin-bottom: 16px;
     margin-top: 24px;
 }
+
+.command-line {
+    text-align: left;
+    background-color: #f6f8fa;
+    border-radius: 3px;
+    padding: 16px;
+    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: bold;
+}
