--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+html, body {
+    margin: 0;
+    padding: 5px;
+    background-color: #f6f8fa;
+}
+
 .sample-container {
     text-align: center;
     max-width: 800px;
