--- a/src/App.css
+++ b/src/App.css
@@ -15,18 +15,6 @@ html, body {
     font-size: 16px
 }
 
-.sample-container pre {
-    padding: 10px;
-    background-color: #EEE;
-    max-width: 600px;
-    margin: auto;
-    border-radius: 10px;
-    font-family: monospace;
-    font-size: 16px;
-    margin-top: 20px;
-    text-align: left;
-}
-
 h1, h2 {
     border-bottom: 1px solid #eaecef;
     padding-bottom: .3em;
@@ -36,7 +24,7 @@ h1, h2 {
     margin-top: 24px;
 }
 
-.command-line {
+.formatted-pre {
     text-align: left;
     background-color: #f6f8fa;
     border-radius: 3px;
@@ -46,3 +34,24 @@ h1, h2 {
     line-height: 20px;
     font-weight: bold;
 }
+
+.formatted-pre * {
+    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: bold;
+}
+
+.formatted-pre .bracket {
+    font-weight: normal;
+}
+
+.formatted-pre .keyword {
+    color: purple;
+}
+
+
+.formatted-pre .string {
+    color: brown;
+}
+
