--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     padding: 5px;
     background-color: #f6f8fa;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
 }
 
 .sample-container {
@@ -66,4 +67,24 @@ h1, h2 {
 .constant .name {
     font-weight: bold;
     margin: 5px;
+}
+
+.prop-table {
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
+}
+
+.prop-table th {
+    background-color: #DDD;
+    text-align: center;
+    padding: 2px;
+}
+
+.prop-table td {
+    padding: 2px;
+}
+
+.prop-table tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
