--- a/src/Common/ConceptTable/ConceptTable.css
+++ b/src/Common/ConceptTable/ConceptTable.css
@@ -1,20 +1,24 @@
-.interval-table {
-    margin: auto;
-    font-size: 16px;
-    line-height: 20px;
-    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+.concept-table {
+    table-layout: fixed;
 }
 
-.interval-table th, .interval-table td {
-    height: 20px;
+.concept-table .interval-id {
+    display: inline-block;
+    margin-right: 5px;
     width: 25px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 14px;
 }
 
-.interval-table .degree-label, .interval-table .semitones-label {
-    font-weight: bold;
-    background-color: #DDD;
+.concept-table th.id {
+    width: 25%;
 }
 
-.interval-table .inactive {
-    background-color: #f2f2f2;
+.concept-table th.name {
+    width: 25%;
+}
+
+.concept-table th.intervals {
+    width: 50%;
 }
