--- a/src/Common/IntervalTable/IntervalTable.css
+++ b/src/Common/IntervalTable/IntervalTable.css
@@ -15,6 +15,18 @@
     background-color: #DDD;
 }
 
-.interval-table .inactive {
+.interval-table .inactive, .interval-box-container .inactive {
     background-color: #f2f2f2;
+}
+
+.interval-box-container {
+    line-height: 20px;
+    font-size: 16px;
+    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+}
+
+.interval-box {
+    height: 20px;
+    width: 25px;
+    display: inline-block;
 }
