--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     background-color: white;
     font-family: Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+    overflow:hidden;
 }
 
 .sample-container {
@@ -10,12 +11,15 @@ html, body {
 }
 
 .app-body {
-    padding: 32px;
+    background-color: #F6F8FA;
+    font-size: 16px;
+    margin-top: 40px;
     text-align: center;
-    max-width: 800px;
-    margin: auto;
-    background-color: #FFF;
-    font-size: 16px
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 h1, h2 {
@@ -29,4 +33,15 @@ h1, h2 {
 
 .italic {
     font-style: italic;
+}
+
+.docs-section {
+    max-width: 800px;
+    margin: auto;
+    height: 100%;
+    padding: 20px;
+    background: white;
+    border-left: 1px solid #d1d5da;
+    border-right: 1px solid #d1d5da;
+    overflow: auto;
 }
