--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ html, body {
 }
 
 .app-body {
-    background-color: #F6F8FA;
+    background-color: #ecf2f8;
     font-size: 16px;
     margin-top: 40px;
     text-align: center;
