--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@ h2 {
     margin-top: 24px;
 }
 
+h3 {
+    font-weight: 500;
+    margin-top: 48px;
+}
+
 .italic {
     font-style: italic;
 }
@@ -61,6 +66,7 @@ ul, ol {
     border-left: 1px solid #d1d5da;
     border-right: 1px solid #d1d5da;
     overflow: auto;
+    padding-bottom: 100px;
 
     position: absolute;
     top: 0;
